<resources>
    <string name="app_name">Family Meeting</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="user_stories">user_stories</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="dialog_add_to_story">AddToStoryDialog</string>
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>
    <string name="spring_header_behavior">tabian.com.instagramclonetest.springheader.SpringHeaderBehavior</string>
    <string name="dependent_view_behavior">tabian.com.instagramclonetest.DependentViewBehavior</string>
    <string name="simple_refresh_header_text_below_threshold">below fold</string>
    <string name="simple_refresh_header_text_above_threshold">above folder</string>
    <string name="simple_refresh_header_text_refreshing">refreshing...</string>
    <string name="bitmap">bitmap</string>
    <string name="image_load_error">image_load_error</string>
    <string name="media_type">media_type</string>
    <string name="duration">duration</string>
    <string name="encoded_bitmap">encoded_bitmap</string>
    <string name="width_scale_factor">width_scale_factor</string>
    <string name="height_scale_factor">height_scale_factor</string>
    <string name="video_uri">video_uri</string>
    <string name="surface_number">surface_number</string>
    <string name="rotations">rotations</string>
    <string name="resource_index">resource_index</string>
    <string name="media_index">media_index</string>
    <string name="media_source">media_source</string>
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="title_activity_likes">LikesActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="nav_header_text">Email@gmail.com</string>
    <string name="nav_recycler_view">Notification</string>
    <string name="nav_rule">Family Rule</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_map">Map</string>
    <string name="nav_all_members">All Members</string>
    <string name="nav_all_Random">Random</string>
    <string name="nav_fullscreen">FullScreen</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_pay">Payment</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="nav_color">Material Design Color</string>
    <string name="nav_add_new_post">Post</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_title_main_1">Home</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A Family application metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_seek_bar">Seek Bar</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text">edit text</string>
    <string name="main_widget_spinner">Spinner</string>
    <string name="main_widget_data_picker">Date Picker</string>
    <string name="main_widget_time_picker">Time Picker</string>
    <string name="title_activity_scrolling">Family Rule</string>
</resources>