<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/add_new_post"
            android:icon="@drawable/ic_send_now"
            android:title="@string/nav_add_new_post" />

        <item
            android:id="@+id/nav_recycler_and_swipe_refresh"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/nav_recycler_view" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_panorama_18dp"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_all_members"
            android:icon="@drawable/group"
            android:title="@string/nav_all_members" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_pin_drop_18dp"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/visited"
            android:title="@string/nav_all_Random" />

        <item
            android:id="@+id/nav_rule"
            android:icon="@drawable/ic_favorite_black_18dp"
            android:title="@string/nav_rule" />


    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/nav_pay" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
